--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 The proper index.html should be left where it is because flask gets confused easily
 The destination URL will need to be changed -->
 
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+<!-- <meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html"> -->
+
+<meta http-equiv="refresh" content="0; url=https://github.com/emeralddawns/Project3-Formula1/tree/main/templates/index.html">
