--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ The destination URL will need to be changed -->
 
 <!-- <meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html"> -->
 
-<meta http-equiv="refresh" content="0; url=https://github.com/emeralddawns/Project3-Formula1/tree/main/templates/index.html">
+<meta http-equiv="refresh" content="0; url=https://emeralddawns.github.io/Project3-Formula1/templates/index.html">
